Prepared a notebook for experiment with different bootstrap size

--- a/notebooks/diff_bootstrap_sizes_exp/Baseline_acs_income/50/ACS_Income_Batch1.ipynb
+++ b/notebooks/diff_bootstrap_sizes_exp/Baseline_acs_income/50/ACS_Income_Batch1.ipynb
@@ -46,8 +46,8 @@
    "id": "128eed2c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-24T14:30:21.865272Z",
-     "start_time": "2024-02-24T14:30:21.512438Z"
+     "end_time": "2024-02-24T15:06:37.857077Z",
+     "start_time": "2024-02-24T15:06:37.551321Z"
     }
    },
    "outputs": [],
@@ -63,8 +63,8 @@
    "id": "6ed040a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-24T14:30:21.875407Z",
-     "start_time": "2024-02-24T14:30:21.865688Z"
+     "end_time": "2024-02-24T15:06:42.911721Z",
+     "start_time": "2024-02-24T15:06:42.895504Z"
     }
    },
    "outputs": [],
@@ -81,8 +81,8 @@
    "id": "435ed8bd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-24T14:30:21.887306Z",
-     "start_time": "2024-02-24T14:30:21.875711Z"
+     "end_time": "2024-02-24T15:06:43.391627Z",
+     "start_time": "2024-02-24T15:06:43.367477Z"
     }
    },
    "outputs": [
@@ -97,7 +97,7 @@
    "source": [
     "cur_folder_name = os.getcwd().split('/')[-1]\n",
     "if cur_folder_name != \"fairness-variance\":\n",
-    "    os.chdir(\"../../..\")\n",
+    "    os.chdir(\"../../../..\")\n",
     "\n",
     "print('Current location: ', os.getcwd())"
    ]
@@ -116,8 +116,8 @@
    "id": "9714b452",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-24T14:30:26.429742Z",
-     "start_time": "2024-02-24T14:30:21.965787Z"
+     "end_time": "2024-02-24T15:06:49.735350Z",
+     "start_time": "2024-02-24T15:06:45.433442Z"
     }
    },
    "outputs": [
@@ -156,8 +156,8 @@
    "id": "4e66ac44",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-24T14:30:27.317272Z",
-     "start_time": "2024-02-24T14:30:27.264075Z"
+     "end_time": "2024-02-24T15:06:50.723358Z",
+     "start_time": "2024-02-24T15:06:50.667741Z"
     }
    },
    "outputs": [],
@@ -165,12 +165,13 @@
     "ROOT_DIR = os.getcwd()\n",
     "META_EXPERIMENT_NAME = 'diff_bootstrap_sizes_exp'\n",
     "EXPERIMENT_NAME = 'Baseline_acs_income'\n",
+    "BOOTSTRAP_SIZE = '50'\n",
     "DB_COLLECTION_NAME = 'one_repair_lvl_many_models'\n",
     "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
-    "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME, EXPERIMENT_NAME)\n",
+    "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME, EXPERIMENT_NAME, BOOTSTRAP_SIZE)\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', META_EXPERIMENT_NAME,\n",
-    "                                EXPERIMENT_NAME, 'folk_CA_2018_config.yaml')\n",
+    "                                EXPERIMENT_NAME, BOOTSTRAP_SIZE, 'folk_CA_2018_config.yaml')\n",
     "metrics_computation_config = create_config_obj(config_yaml_path=config_yaml_path)"
    ]
   },
@@ -188,8 +189,8 @@
    "id": "6bf5b49a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-24T14:30:27.718386Z",
-     "start_time": "2024-02-24T14:30:27.657002Z"
+     "end_time": "2024-02-24T15:06:52.451405Z",
+     "start_time": "2024-02-24T15:06:52.399192Z"
     }
    },
    "outputs": [
@@ -216,8 +217,8 @@
    "id": "5e42af71",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-24T14:30:29.059596Z",
-     "start_time": "2024-02-24T14:30:27.880401Z"
+     "end_time": "2024-02-24T15:06:53.005423Z",
+     "start_time": "2024-02-24T15:06:52.638359Z"
     }
    },
    "outputs": [],
@@ -233,8 +234,8 @@
    "id": "06e3ba9d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-24T14:30:29.108440Z",
-     "start_time": "2024-02-24T14:30:29.059956Z"
+     "end_time": "2024-02-24T15:06:53.757610Z",
+     "start_time": "2024-02-24T15:06:53.697295Z"
     }
    },
    "outputs": [
@@ -242,7 +243,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  b8ffd932-5995-4d01-b6c6-8fd6a16d58a3\n"
+      "Current session uuid:  a6cb1ff6-8834-4627-a282-679b17beaf58\n"
      ]
     }
    ],
@@ -251,7 +252,7 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "    # 'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': 'b8ffd932-5995-4d01-b6c6-8fd6a16d58a3',\n",
+    "    'session_uuid': 'a6cb1ff6-8834-4627-a282-679b17beaf58',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
@@ -270,8 +271,8 @@
    "id": "69534170",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-24T14:30:36.334139Z",
-     "start_time": "2024-02-24T14:30:30.039343Z"
+     "end_time": "2024-02-24T15:07:01.822930Z",
+     "start_time": "2024-02-24T15:06:55.468226Z"
     }
    },
    "outputs": [
@@ -297,8 +298,8 @@
    "id": "ba126e4e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-24T14:30:36.411067Z",
-     "start_time": "2024-02-24T14:30:36.333855Z"
+     "end_time": "2024-02-24T15:07:01.920504Z",
+     "start_time": "2024-02-24T15:07:01.820909Z"
     }
    },
    "outputs": [
@@ -337,15 +338,15 @@
    "id": "12438df8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-24T14:30:36.463441Z",
-     "start_time": "2024-02-24T14:30:36.393557Z"
+     "end_time": "2024-02-24T15:07:02.518662Z",
+     "start_time": "2024-02-24T15:07:02.465803Z"
     }
    },
    "outputs": [],
    "source": [
     "# tuned_params_filenames = []\n",
     "# tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME,\n",
-    "#                                       EXPERIMENT_NAME, tuned_params_filename)\n",
+    "#                                       EXPERIMENT_NAME, BOOTSTRAP_SIZE, tuned_params_filename)\n",
     "#                          for tuned_params_filename in tuned_params_filenames]"
    ]
   },
@@ -355,8 +356,8 @@
    "id": "dc6e1377",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-24T14:30:36.485960Z",
-     "start_time": "2024-02-24T14:30:36.436978Z"
+     "end_time": "2024-02-24T15:07:02.757844Z",
+     "start_time": "2024-02-24T15:07:02.708200Z"
     }
    },
    "outputs": [],
@@ -376,8 +377,8 @@
    "id": "1783feb5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-24T14:31:48.631452Z",
-     "start_time": "2024-02-24T14:30:36.482415Z"
+     "end_time": "2024-02-24T15:08:11.330537Z",
+     "start_time": "2024-02-24T15:07:03.282781Z"
     }
    },
    "outputs": [
@@ -385,7 +386,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-24 16:30:36 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n"
+      "2024-02-24 17:07:03 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n"
      ]
     },
     {
@@ -396,7 +397,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[0.0]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'b8ffd932-5995-4d01-b6c6-8fd6a16d58a3'}\n"
+      " 'session_uuid': 'a6cb1ff6-8834-4627-a282-679b17beaf58'}\n"
      ]
     },
     {
@@ -405,7 +406,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "176813c0ee314a2b95f8f3d53d1a9286"
+       "model_id": "6103fdfe38e34cf3a832658a49ed0eaf"
       }
      },
      "metadata": {},
@@ -422,7 +423,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-24 16:30:36 experiment_interface.py INFO    : The dataset is preprocessed\n"
+      "2024-02-24 17:07:03 experiment_interface.py INFO    : The dataset is preprocessed\n"
      ]
     },
     {
@@ -446,15 +447,15 @@
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
       "             8665,  6253],\n",
       "           dtype='int64')\n",
-      "2024/02/24, 16:30:36: Tuning RandomForestClassifier...\n",
-      "2024/02/24, 16:31:02: Tuning for RandomForestClassifier is finished [F1 score = 0.7903519793727388, Accuracy = 0.7984166666666667]\n"
+      "2024/02/24, 17:07:03: Tuning RandomForestClassifier...\n",
+      "2024/02/24, 17:07:26: Tuning for RandomForestClassifier is finished [F1 score = 0.7903519793727388, Accuracy = 0.7984166666666667]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-24 16:31:02 experiment_interface.py INFO    : Models are tuned and saved to a file\n"
+      "2024-02-24 17:07:26 experiment_interface.py INFO    : Models are tuned and saved to a file\n"
      ]
     },
     {
@@ -463,7 +464,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "67bc3fd19cfc4e55ac63932298e79dd4"
+       "model_id": "3cb84b9f9e9f443b8498005b0d6cda03"
       }
      },
      "metadata": {},
@@ -475,7 +476,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "50d1d1b8b3eb44e6966c54599b2fd725"
+       "model_id": "d1cd021de19444a4b630d006c7987a09"
       }
      },
      "metadata": {},
@@ -519,7 +520,7 @@
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
     "]\n",
-    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
+    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME, EXPERIMENT_NAME, BOOTSTRAP_SIZE, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
@@ -570,7 +571,7 @@
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
     "]\n",
-    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
+    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME, EXPERIMENT_NAME, BOOTSTRAP_SIZE, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
@@ -621,7 +622,7 @@
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
     "]\n",
-    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
+    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME, EXPERIMENT_NAME, BOOTSTRAP_SIZE, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
@@ -672,7 +673,7 @@
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
     "]\n",
-    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
+    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME, EXPERIMENT_NAME, BOOTSTRAP_SIZE, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
@@ -723,7 +724,7 @@
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
     "]\n",
-    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
+    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME, EXPERIMENT_NAME, BOOTSTRAP_SIZE, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
