--- a/notebooks/diff_bootstrap_sizes_exp/Baseline_acs_income/50/ACS_Income_Batch1.ipynb
+++ b/notebooks/diff_bootstrap_sizes_exp/Baseline_acs_income/50/ACS_Income_Batch1.ipynb
@@ -459,10 +459,12 @@
    },
    "outputs": [],
    "source": [
-    "# tuned_params_filenames = []\n",
-    "# tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME,\n",
-    "#                                       EXPERIMENT_NAME, BOOTSTRAP_SIZE, tuned_params_filename)\n",
-    "#                          for tuned_params_filename in tuned_params_filenames]"
+    "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_CA_2018_Income_alpha_0.0_20240224__154709.csv'\n",
+    "]\n",
+    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME,\n",
+    "                                      EXPERIMENT_NAME, '50', tuned_params_filename)\n",
+    "                         for tuned_params_filename in tuned_params_filenames]"
    ]
   },
   {
@@ -513,9 +515,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[0.0]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'f12c5c59-e58a-4f5a-bc5b-e33f81189fd7'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': 'f12c5c59-e58a-4f5a-bc5b-e33f81189fd7'}\n"
      ]
     },
     {
@@ -563,8 +563,7 @@
       "             8665,  6253],\n",
       "           dtype='int64')\n",
       "2024/02/24, 10:40:08: Tuning RandomForestClassifier...\n",
-      "2024/02/24, 10:47:09: Tuning for RandomForestClassifier is finished [F1 score = 0.7964260996082068, Accuracy = 0.8041666666666667]\n",
-      "\n"
+      "2024/02/24, 10:47:09: Tuning for RandomForestClassifier is finished [F1 score = 0.7964260996082068, Accuracy = 0.8041666666666667]\n"
      ]
     },
     {
@@ -613,9 +612,9 @@
     "                                   models_params_for_tuning=models_params_for_tuning,\n",
     "                                   metrics_computation_config=metrics_computation_config,\n",
     "                                   custom_table_fields_dct=custom_table_fields_dct,\n",
-    "                                   with_tuning=True,\n",
-    "                                   # with_tuning=False,\n",
-    "                                   # tuned_params_df_paths=tuned_params_df_paths,\n",
+    "                                   # with_tuning=True,\n",
+    "                                   with_tuning=False,\n",
+    "                                   tuned_params_df_paths=tuned_params_df_paths,\n",
     "                                   save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
     "                                   dataset_name='ACSIncomeDataset',\n",
     "                                   verbose=True)"
@@ -640,8 +639,9 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_CA_2018_Income_alpha_0.0_20240224__154709.csv'\n",
     "]\n",
-    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME, EXPERIMENT_NAME, BOOTSTRAP_SIZE, tuned_params_filename)\n",
+    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME, EXPERIMENT_NAME, '50', tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
@@ -691,8 +691,9 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_CA_2018_Income_alpha_0.0_20240224__154709.csv'\n",
     "]\n",
-    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME, EXPERIMENT_NAME, BOOTSTRAP_SIZE, tuned_params_filename)\n",
+    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME, EXPERIMENT_NAME, '50', tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
@@ -742,8 +743,9 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_CA_2018_Income_alpha_0.0_20240224__154709.csv'\n",
     "]\n",
-    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME, EXPERIMENT_NAME, BOOTSTRAP_SIZE, tuned_params_filename)\n",
+    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME, EXPERIMENT_NAME, '50', tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
@@ -793,8 +795,9 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_CA_2018_Income_alpha_0.0_20240224__154709.csv'\n",
     "]\n",
-    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME, EXPERIMENT_NAME, BOOTSTRAP_SIZE, tuned_params_filename)\n",
+    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME, EXPERIMENT_NAME, '50', tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
@@ -844,8 +847,9 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_CA_2018_Income_alpha_0.0_20240224__154709.csv'\n",
     "]\n",
-    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME, EXPERIMENT_NAME, BOOTSTRAP_SIZE, tuned_params_filename)\n",
+    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', META_EXPERIMENT_NAME, EXPERIMENT_NAME, '50', tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
